# ovc

./: .cursorrules  .env.example  .gitignore  AUTH_MIGRATION.md  PROJECT_DOCUMENTATION.md  QUICK_START.md  README.md  README_simple.md  START_SERVER.sh  VANYA.md  package.json  repo-map.md
alembic/: env.py
alembic/versions/: 20251226_init_auth_tables.py
app/chat/: page.tsx
app/graph/: page.tsx
app/settings/: page.tsx
baselines/base/: .env.example  README.md  drizzle.config.ts  package.json  tailwind.config.ts  tsconfig.json
baselines/base_v2/: .env.example  README.md  docker-compose.yml  next.config.mjs
components/: ChatView.tsx  ConnectionsPanel.tsx  DiffCard.tsx  GraphView.tsx  LinkBadge.tsx  MarkdownView.tsx  NoteCard.tsx  TagPill.tsx  linkReasonMeta.ts
deploy/cloudflare_tunnel/: README_TUNNEL.md  config.yml.template  start_public_server.sh  start_tunnel.sh  verify_public.sh
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/web/: index.html
docs/: auth_migration.md  design-fixes.md  env.example.md  quick_start.md  repo_map.md
docs/pdf/: debug.md  performance.md
drizzle/migrations/: 0001_agent.sql
lib/: actions.ts  graph.ts  rag.ts  schema.ts
scripts/: migrate_desktop_to_shared.py  seed.ts  start_server.sh
server/agent/: commitDraft.ts  (+3 more)
simple_app/: README_simple.md  requirements.txt  run.sh
src/: .env.example  README_simple.md  requirements.txt
stores/: chat-store.ts
tests/: test_agent.py  test_block_models.py  test_sync_engine.py  test_upload_api.py
types/: agent.ts  web.ts
(+203 files in other folders)
