[package]
name = "ovc-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["window-all", "shell-open", "path-all", "dialog-all"] }
ureq = "2.10"
url = "2.5"

[features]
default = []
